# pretix-advanced-stats

./: .gitignore  .update-locales.sh  LICENSE  MANIFEST.in  Makefile  README.rst  pretixplugin.toml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: style.yml  tests.yml
pretix_advanced_stats/: apps.py  signals.py  urls.py  views.py
pretix_advanced_stats/locale/de_Informal/LC_MESSAGES/: django.po
pretix_advanced_stats/static/pretix_advanced_stats/: stats.js
pretix_advanced_stats/templates/pretix_advanced_stats/: advanced_stats.html
