[project]
name = "pretix-plugin-advanced-stats"
dynamic = ["version"]
description = "Short description"
readme = "README.rst"
license = {text = "Apache"}
keywords = ["pretix"]
authors = [
    {name = "pamaron", email = "ernesto.arbitrio@gmail.com"},
]
maintainers = [
    {name = "pamaron", email = "ernesto.arbitrio@gmail.com"},
]

dependencies = [
]

[project.entry-points."pretix.plugin"]
pretix_advanced_stats = "pretix_advanced_stats:PretixPluginMeta"

[project.entry-points."distutils.commands"]
build = "pretix_plugin_build.build:CustomBuild"

[build-system]
requires = [
    "setuptools",
    "pretix-plugin-build",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "pretix_advanced_stats.__version__"}

[tool.setuptools.packages.find]
include = ["pretix*"]
namespaces = false
